--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,17 +18,10 @@
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         <ul>
-          {% for page in site.pages %}
-            {% if page.path contains 'docs/' and page.ext == '.md' %}
-              {% assign depth = page.path | split: '/' | size %}
-              {% if depth == 2 %}
-                <li>
-                  <a href="{{ page.url | relative_url }}">
-                    {{ page.title | default: page.name }}
-                  </a>
-                </li>
-              {% endif %}
-            {% endif %}
+          {% for doc in site.docs %}
+            <li>
+              <a href="{{ doc.url | relative_url }}">{{ doc.title }}</a>
+            </li>
           {% endfor %}
         </ul>
       </header>
