--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,11 +16,14 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h3><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h3>
         <ul>
-          {% for doc in site.docs %}
+          {% assign doc_pages = site.pages | where_exp: "p", "p.path contains 'docs/'" | sort: "title" %}
+          {% for page in doc_pages %}
             <li>
-              <a href="{{ doc.url | relative_url }}">{{ doc.title }}</a>
+              <a href="{{ page.url | relative_url }}">
+                {{ page.title | default: page.path | split: '/' | last }}
+              </a>
             </li>
           {% endfor %}
         </ul>
