--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,28 @@
 
   {% seo %}
 
+  <script src="{{ "/assets/js/theme.js" | relative_url }}"></script>
+  <script>
+    initTheme();
+    function toggleTheme(button) {
+      const theme = getTheme();
+      const isDark = theme == "dark";
+      setTheme(isDark ? "light" : "dark");
+      setThemeIconHTML(button);
+    }
+    function setThemeIconHTML(button) {
+      const theme = getTheme();
+      const isDark = theme == "dark";
+      button.innerHTML = !isDark ? "&#x1F533;" : "&#x1F506;";
+    }
+  </script>
+
   <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
   <!--[if lt IE 9]>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
   <![endif]-->
   {% include head-custom.html %}
+
 </head>
 
 <body>
@@ -35,6 +52,10 @@
       {{ content }}
 
     </section>
+    <button id="toggle-theme" onclick="toggleTheme(this)"></button>
+    <script>
+      setThemeIconHTML(document.getElementById("toggle-theme"));
+    </script>
   </div>
   <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
 </body>
