--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,8 @@
       <ul style="padding:0;">
         {% assign doc_pages = site.pages | where_exp: "p", "p.path contains 'docs/'" | sort: "title" %}
         {% for page in doc_pages %}
-        <li>
-          <a href="{{ page.url | relative_url }}">
+        <li style="padding:0;">
+          <a style="display:block; padding:10px 15px;" href="{{ page.url | relative_url }}">
             {{ page.title | default: page.path | split: '/' | last }}
           </a>
         </li>
