Fixed scroll elements

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     function setThemeIconHTML(button) {
       const theme = getTheme();
       const isDark = theme == "dark";
-      button.innerHTML = !isDark ? "&#x1F533;" : "&#x1F506;";
+      button.innerHTML = !isDark ? "&#x1F31A;" : "&#x1F31D;";
     }
     function toggleTheme(button) {
       const theme = getTheme();
