--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -64,7 +64,7 @@
   --hr-color: #444;
   --strong-color: #fff;
 
-  --code-fg: #fbf1c7;
+  --code-fg: #bebebe;
   --code-bg: #282828;
   --code-keyword: #fb4934;
   --code-keyword-alt: #fe8019;
