--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,9 @@
       setTheme(isDark ? "light" : "dark");
       setThemeIconHTML(button);
     }
+
+    const params = new URL(document.location.toString()).searchParams;
+    const q_query = params.get("q");
   </script>
 
   <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
@@ -36,10 +39,17 @@
   <div class="wrapper">
     <header>
       <h3><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h3>
+      <input type="text" id="searchDocs" placeholder="Search docs..."
+        style="width:100%; padding:10px; margin-bottom:10px;">
       <ul style="padding:0;">
         {% assign doc_pages = site.pages | where_exp: "p", "p.path contains 'docs/'" | sort: "title" %}
         {% for page in doc_pages %}
-        <li style="padding:0;">
+        <li
+          style="padding:0;"
+          class="doc-item"
+          data-title="{{ page.title | downcase }}"
+          data-content="{{ page.content | strip_html | downcase | escape }}"
+        >
           <a style="display:block; padding:10px 15px;" href="{{ page.url | relative_url }}">
             {{ page.title | default: page.path | split: '/' | last }}
           </a>
@@ -58,6 +68,27 @@
     </script>
   </div>
   <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+  <script>
+    const items = document.querySelectorAll(".doc-item");
+
+    const searchDocs = document.getElementById("searchDocs");
+    searchDocs.value = q_query || localStorage.getItem("q") || "";
+
+    /* Search docs */
+    searchDocs.addEventListener("input", function () {
+      const query = this.value.toLowerCase().trim();
+      localStorage.setItem("q", query);
+      items.forEach(item => {
+        const title = item.dataset.title || "";
+        const content = item.dataset.content || "";
+        if (title.includes(query) || content.includes(query)) {
+          item.style.display = "";
+        } else {
+          item.style.display = "none";
+        }
+      });
+    });
+  </script>
 </body>
 
 </html>
